--- a/src/app/create-company/create-company.component.html
+++ b/src/app/create-company/create-company.component.html
@@ -13,6 +13,7 @@
     type="file"
     id="image"
     name="image"
+    multiple
     (change)="onFileSelected($event)"
     accept="image/*"
   />
