--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,20 @@
-<mat-toolbar color="primary">
-  <span>Barber Visual</span>
-  <span style="flex: 1 1 auto;"></span>
-  <a mat-button routerLink="/home">Home</a>
-  <a mat-button routerLink="/companies">Companies</a>
-  <a mat-button routerLink="/about">About</a>
-  <a mat-button routerLink="/contact">Contact</a>
-</mat-toolbar>
+<header class="navbar">
+  <nav class="nav-links">
+    <a class="nav-button" routerLink="/home">Home</a>
+    <a class="nav-button" routerLink="/companies">Companies</a>
+    <a class="nav-button" routerLink="/about">About</a>
+    <a class="nav-button" routerLink="/contact">Contact</a>
 
-<div style="padding: 16px;">
+    <a *ngIf="isLoggedIn" class="nav-button" (click)="logout()">Logout</a>
+
+    <div *ngIf="!isLoggedIn" class="auth-buttons">
+      <a class="nav-button" routerLink="/login">Login</a>
+      <a class="nav-button" routerLink="/register">Register</a>
+    </div>
+  </nav>
+</header>
+
+
+<div class="divklasa">
   <router-outlet></router-outlet>
 </div>
