--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html,
-body {
-    height: 100%;
-}
-
-body::-webkit-scrollbar {
-    display: none;
-}
-body {
-    overflow-y: scroll;
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
