--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <input type="text" id="email" name="email" [(ngModel)]="email" required/>
 
     <label for="password">Password:</label>
-    <input type="text" id="password" name="password" [(ngModel)]="password" required/>
+    <input type="password" id="password" name="password" [(ngModel)]="password" required/>
 
     <button type="submit">Login</button>
 </form>
