--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -10,9 +10,9 @@
     </button>
   </div>
 
-  <div *ngIf="companies.length > 0" class="container">
+  <div *ngIf="filteredCompaniesByOwnerId.length > 0 || companies.length > 0" class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let company of companies">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let company of filteredCompaniesByOwnerId.length ? filteredCompaniesByOwnerId : companies">
         <div class="company-card">
 
           <!-- Slika kompanije (prva ako postoji) -->
