Added dashboard components
Admin components, Owner components

--- a/src/app/add-haircut/add-haircut.component.html
+++ b/src/app/add-haircut/add-haircut.component.html
@@ -1,4 +1,4 @@
-<div class="barber-form-bg d-flex justify-content-center align-items-center">
+<div class="barber-form-bg d-flex justify-content-center align-items-center pt-5">
     <!-- Poluprovidna kutija sa formom -->
     <div class="col-md-6 bg-white bg-opacity-75 p-5 rounded-4 shadow-lg">
         <h3 class="mb-4 text-center text-primary">Dodaj tip usluge</h3>
