--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,34 @@
-<header class="navbar">
-  <nav class="nav-links">
-    <a class="nav-button" routerLink="/home">Home</a>
-    <a class="nav-button" routerLink="/companies">Companies</a>
-    <a class="nav-button" routerLink="/about">About</a>
-    <a class="nav-button" routerLink="/contact">Contact</a>
+<div class="">
+  <header class="navbar">
+    <nav class="nav-links">
+      <a class="nav-button" routerLink="/home">Home</a>
+      <a class="nav-button" routerLink="/companies">Companies</a>
+      <a class="nav-button" routerLink="/about">About</a>
+      <a class="nav-button" routerLink="/contact">Contact</a>
 
-    <a *ngIf="isLoggedIn" class="nav-button" (click)="logout()">Logout</a>
+      <!-- <a *ngIf="isLoggedIn" class="nav-button" (click)="logout()">Logout</a> -->
+      <div class="dropdown" *ngIf="isLoggedIn">
+        <img src="../assets/logos/profile.png" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+          alt="Profile Picture" class="rounded-circle dropdown-toggle" style="width: 35px; height: 35px;">
+        <ul class="dropdown-menu">
+          <li><a class="btn dropdown-item" routerLink="/dashboard">Dashboard</a></li>
+          <li><a class="btn dropdown-item" (click)="logout()">Logout</a></li>
+        </ul>
+      </div>
+      <div *ngIf="!isLoggedIn" class="auth-buttons">
+        <a class="nav-button" routerLink="/login">Login</a>
+        <a class="nav-button" routerLink="/register">Register</a>
+      </div>
 
-    <div *ngIf="!isLoggedIn" class="auth-buttons">
-      <a class="nav-button" routerLink="/login">Login</a>
-      <a class="nav-button" routerLink="/register">Register</a>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
+  
+  <div class="divklasa">
+    <router-outlet></router-outlet>
+  </div>
 
 
-<div class="divklasa">
-  <router-outlet></router-outlet>
+  <footer class="text-center">
+    <p>&copy; {{year}} </p>
+  </footer>
 </div>
