--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,9 +1,32 @@
-<form (ngSubmit)="onSubmit()" #loginForm="ngForm" enctype="multipart/form-data">
+<!-- <form (ngSubmit)="onSubmit()" #loginForm="ngForm" enctype="multipart/form-data">
     <label for="email">Email:</label>
-    <input type="text" id="email" name="email" [(ngModel)]="email" required/>
+    <input type="text" id="email" name="email" [(ngModel)]="email" required />
 
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" [(ngModel)]="password" required/>
+    <input type="password" id="password" name="password" [(ngModel)]="password" required />
 
     <button type="submit">Login</button>
-</form>
+</form> -->
+
+
+<div class="barber-form-bg d-flex justify-content-center align-items-center min-vh-100">
+    <div class="col-md-4 bg-white bg-opacity-75 p-5 rounded-4 shadow-lg">
+        <h3 class="mb-4 text-center text-primary">Login</h3>
+
+        <form (ngSubmit)="onSubmit()" #loginForm="ngForm" enctype="multipart/form-data">
+            <label for="email">Email:</label>
+            <div class="mb-3">
+                <input type="text" id="email" name="email" class="form-control" placeholder="example@gmail.com" [(ngModel)]="email" required />
+            </div>
+
+            <label for="password">Password:</label>
+            <div class="mb-3">
+                <input type="password" id="password" name="password" class="form-control" placeholder="******" [(ngModel)]="password" required />
+            </div>
+
+            <div class="text-center">
+                <button type="submit" class="btn btn-success px-5">Uloguj se</button>
+            </div>
+        </form>
+    </div>
+</div>
