--- a/src/app/create-barber/create-barber.component.html
+++ b/src/app/create-barber/create-barber.component.html
@@ -25,6 +25,13 @@
 
       </div>
 
+      <label for="password">Lozinka</label>
+      <div class=" mb-3">
+        <input id="password" name="password" type="password" required class="form-control" placeholder="*******"
+          ngModel />
+
+      </div>
+
       <div class="mb-3">
         <label for="individualStartTime" class="form-label">Početak rada:</label>
         <input id="individualStartTime" name="individualStartTime" type="time" required class="form-control" ngModel />
